# blizzard

./: .gitignore  Cargo.toml  Dockerfile  Makefile  NOTICE  README.md
.github/workflows/: deploy-docs.yml
benches/: bench_utils.rs  blizzard_benchmarks.rs
crates/blizzard/: Cargo.toml
crates/blizzard-common/: Cargo.toml
crates/blizzard-common/src/: error.rs  lib.rs  partition.rs  polling.rs  signal.rs  tracing.rs  types.rs
crates/blizzard-common/src/config/: component_key.rs  global.rs  loader.rs  mod.rs  path.rs  resource.rs
crates/blizzard-common/src/metrics/: events.rs  mod.rs  server.rs
crates/blizzard-common/src/resource/: mod.rs  pool.rs
crates/blizzard-common/src/storage/: azure.rs  local.rs  mod.rs  prefix.rs
crates/blizzard-common/src/topology/: builder.rs  mod.rs  pipeline.rs  running.rs  task.rs
crates/blizzard-common/src/watermark/: listing.rs  mod.rs
crates/blizzard-core/: Cargo.toml
crates/blizzard-core/src/: app.rs  error.rs  lib.rs  partition.rs  polling.rs  schema.rs  tracing.rs
crates/blizzard-core/src/config/: component_key.rs  global.rs  loader.rs  mod.rs  resource.rs  vars.rs
crates/blizzard-core/src/metrics/: events.rs  mod.rs  utilization.rs
crates/blizzard-core/src/resource/: pool.rs
crates/blizzard-core/src/storage/: gcs.rs  mod.rs  s3.rs  url_parser.rs
crates/blizzard-core/src/topology/: mod.rs  pipeline.rs  task.rs
crates/blizzard-core/src/watermark/: listing.rs  mod.rs  state.rs
crates/blizzard/benches/: bench_utils.rs  pipeline_throughput.rs
crates/blizzard/src/: error.rs  lib.rs  main.rs  staging.rs
crates/blizzard/src/checkpoint/: mod.rs  state.rs
crates/blizzard/src/config/: mod.rs  pipeline_key.rs
crates/blizzard/src/dlq/: mod.rs  queue.rs  tracker.rs  types.rs
crates/blizzard/src/parquet/: mod.rs  writer.rs
crates/blizzard/src/pipeline/: download.rs  mod.rs  partition.rs  processor.rs  sink.rs  sink_writer.rs  tracker.rs
crates/blizzard/src/pipeline/tasks/: discovery.rs  download.rs  mod.rs  upload.rs
crates/blizzard/src/sink/: mod.rs  parquet.rs  storage.rs  traits.rs  writer.rs
crates/blizzard/src/source/: compression.rs  inference.rs  listing.rs  mod.rs  reader.rs  traits.rs
crates/blizzard/tests/: integration_test.rs
crates/penguin/: Cargo.toml
crates/penguin/src/: error.rs  incoming.rs  lib.rs  main.rs  schema.rs  staging.rs
crates/penguin/src/checkpoint/: mod.rs  state.rs  traits.rs
crates/penguin/src/config/: mod.rs  table_key.rs
crates/penguin/src/incoming/: mod.rs  reader.rs  traits.rs
crates/penguin/src/metrics/: events.rs  mod.rs
crates/penguin/src/pipeline/: mod.rs
crates/penguin/src/schema/: evolution.rs  inference.rs  manager.rs  mod.rs
crates/penguin/src/sink/: delta.rs  mod.rs  traits.rs
crates/penguin/src/sink/delta/: actions.rs  commit.rs  mod.rs  table.rs
crates/penguin/tests/: checkpoint_crash_tests.rs
grafana/: blizzard-dashboard.json  blizzard.json  penguin.json
lib/tracing-limit/: Cargo.toml
lib/tracing-limit/src/: lib.rs
scripts/: bump-version.sh
src/: dlq.rs  error.rs  internal_events.rs  lib.rs  main.rs  metrics.rs  pipeline.rs  storage.rs  utilization.rs
src/checkpoint/: mod.rs  state.rs
src/config/: mod.rs  vars.rs
src/dlq/: mod.rs  queue.rs  tracker.rs  types.rs
src/metrics/: events.rs  mod.rs  server.rs
src/pipeline/: mod.rs  tasks.rs
src/pipeline/tasks/: download.rs  mod.rs  upload.rs
src/sink/: delta.rs  mod.rs  parquet.rs
src/source/: mod.rs  reader.rs  state.rs
src/storage/: gcs.rs  mod.rs  prefix.rs
tests/: checkpoint_crash_tests.rs  integration_test.rs
website/: .gitignore  astro.config.mjs  package-lock.json  package.json
website/public/: robots.txt
website/src/components/: PollingCaveat.astro
website/src/content/docs/: index.mdx
website/src/content/docs/architecture/: checkpoint-recovery.md  checkpoint.md  configuration.md  dlq.md  overview.md  pipeline-overview.d2  pipeline.md  scaling.md  sink.md  source.md  source.mdx  storage.md  topology.md  watermarking.md
website/src/content/docs/concepts/: backfilling.md  fault-tolerance.mdx  storage.md  topology.md  watermarking.md
website/src/content/docs/penguin/: configuration.md  delta-lake.md  fault-tolerance.md  fault-tolerance.mdx  index.md  schema-evolution.md
website/src/content/docs/reference/: configuration.md  dlq.md  errors.md  metrics.md  penguin.md
