[package]
name = "blizzard"
version = "0.2.1"
description = "File loader for streaming NDJSON.gz files to Parquet staging"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "blizzard"
path = "src/main.rs"

[dependencies]
# Internal
blizzard-core = { workspace = true }

# Delta Lake (for Arrow/Parquet types)
deltalake = { workspace = true }

# Object storage (for PutPayload types)
object_store = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Decompression
flate2 = { workspace = true }
zstd = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# CLI
clap = { workspace = true }

# Error handling
snafu = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-limit = { workspace = true }

# Ordered maps
indexmap = { workspace = true }

# Misc
bytes = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
