[package]
name = "tracing-limit"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
tracing-core = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "std"] }
dashmap = { version = "6.1", default-features = false }
